--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "aws-amplify": "^3.1.1",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "use-media": "^1.4.0"
   },
   "devDependencies": {
     "@blueprintjs/eslint-config": "^0.5.0",
