--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@blueprintjs/core": "^3.31.0",
     "aws-amplify": "^3.1.1",
     "classnames": "^2.2.6",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-query": "^2.17.0",
+    "react-query-devtools": "^2.4.7",
+    "react-transition-group": "^4.4.1",
     "use-media": "^1.4.0"
   },
   "devDependencies": {
@@ -21,6 +25,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
     "lint-staged": "^10.3.0",
+    "node-sass": "^4.14.1",
     "prettier": "^2.1.1",
     "react-scripts": "3.4.3"
   },
@@ -28,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-api": "amplify mock api"
   },
   "eslintConfig": {
     "extends": [
