--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#293742",
-  "background_color": "#e1e8ed"
+  "background_color": "#293742"
 }
