--- a/package.json
+++ b/package.json
@@ -12,7 +12,20 @@
     "react-query": "^2.17.0",
     "react-query-devtools": "^2.4.7",
     "react-transition-group": "^4.4.1",
-    "use-media": "^1.4.0"
+    "use-media": "^1.4.0",
+    "web-vitals": "^0.2.2",
+    "workbox-background-sync": "^5.1.3",
+    "workbox-broadcast-update": "^5.1.3",
+    "workbox-cacheable-response": "^5.1.3",
+    "workbox-core": "^5.1.3",
+    "workbox-expiration": "^5.1.3",
+    "workbox-google-analytics": "^5.1.3",
+    "workbox-navigation-preload": "^5.1.3",
+    "workbox-precaching": "^5.1.3",
+    "workbox-range-requests": "^5.1.3",
+    "workbox-routing": "^5.1.3",
+    "workbox-strategies": "^5.1.3",
+    "workbox-streams": "^5.1.3"
   },
   "devDependencies": {
     "@blueprintjs/eslint-config": "^0.5.0",
@@ -34,7 +47,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start-api": "amplify mock api"
+    "start-api": "amplify mock api",
+    "deploy": "amplify publish"
   },
   "eslintConfig": {
     "extends": [
