--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@blueprintjs/core": "^3.31.0",
     "aws-amplify": "^3.1.1",
     "classnames": "^2.2.6",
+    "fuzzy-search": "^3.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -48,7 +49,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start-api": "amplify mock api",
-    "deploy": "amplify publish"
+    "deploy": "amplify publish -c"
   },
   "eslintConfig": {
     "extends": [
